fixed Main_title
Fix: fixed main title beacuse its overflowing in small screen

--- a/styles/app.css
+++ b/styles/app.css
@@ -2946,11 +2946,10 @@ body:not(.touch-device) .header__item:hover .header__body {
   font-weight: bolder;
   line-height: 1.2;
 }
-@media (max-width:767px) {
-  .home-header{
+@media (max-width: 767px) {
+  .home-header {
     font-size: 38px;
   }
-
 }
 
 .title__box {
@@ -3070,19 +3069,19 @@ body:not(.touch-device) .header__item:hover .header__body {
   height: 82px;
 }
 
-.desktop_image{
+.desktop_image {
   position: absolute;
-  right:-20px;
-  top:270px;
+  right: -20px;
+  top: 270px;
 }
 
-@media (max-width:1220px) {
-  .desktop_image{
+@media (max-width: 1220px) {
+  .desktop_image {
     right: 50px;
   }
 }
-@media (max-width:767px) {
-  .desktop_image{
+@media (max-width: 767px) {
+  .desktop_image {
     position: initial;
   }
 }
@@ -8287,10 +8286,9 @@ html {
 .feature-slide-row {
 }
 
-.logo-container{
-min-width: 50px;
-margin-inline: 20px;
-
+.logo-container {
+  min-width: 50px;
+  margin-inline: 20px;
 }
 .ellipse-blue-full {
   position: absolute;
@@ -10934,6 +10932,7 @@ margin-inline: 20px;
   }
   .main__title {
     /* max-width: 300px; */
+    width: auto;
   }
   .main__title br {
     display: block;
